shit is ready for production

--- a/sigurdurteiturVue/public/index.html
+++ b/sigurdurteiturVue/public/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+
+    <title>Sigurður Teitur Tannason | Software Developer</title>
+
+    <meta
+      name="description"
+      content="Personal website of Sigurður Teitur Tannason. A showcase of my projects, experiments, and software development portfolio."
+    />
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <h1>Sigurður Teitur Tannason</h1>
+      <p>
+        This is my personal portfolio. Please enable JavaScript to view the
+        site.
+      </p>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
