--- a/sigurdurteiturVue/public/index.html
+++ b/sigurdurteiturVue/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
 
-    <title>Sigurður Teitur Tannason | Software Developer</title>
+    <title>Teitur's Portfolio</title>
 
     <meta
       name="description"
